testdata/baselines/reference/submodule/conformance/labeledStatementWithLabel_es2015.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'IterableIterator'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
labeledStatementWithLabel_es2015.ts(11,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
labeledStatementWithLabel_es2015.ts(12,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'IterableIterator'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== labeledStatementWithLabel_es2015.ts (2 errors) ====
    label: function fn() { }
    label: function* gen() { }
    label: async function gen1() { }
    label: enum E {}
    label: interface I {}
    label: class C { }
    label: var a = 1;
    label: let b = 1;
    label: const c = 1;
    
    label: module M { }
           ~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: namespace N {}
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: type T = {}
    